--- a/src/App.scss
+++ b/src/App.scss
@@ -5,3 +5,8 @@
 .text-li {
   color: #fff !important;
 }
+
+.list-dropdown:hover {
+  background-color: black !important;
+  color: #ffff !important;
+}
